--- a/git.tex
+++ b/git.tex
@@ -731,6 +731,12 @@ origin	https://github.com/Stivvo/GitNoob2Pro.git (push)
 Il remote amanjot è un fork (\reff{fork}) del repository di questa dispensa.
 
 \section{Installazione e configurazione\label{configurazione}}
+L'installazione di Git su Linux avviene dal package manager della propria
+distribuzione eed è un processo che richiede pochi secondi.
+Su Windows, occorre \link{https://git-scm.com/download/win}{scaricare} un wizard
+che installa un emulatore di una versione minimale di linux che comprende tool
+come bash e openssh, da cui Git dipende.
+
 \begin{verbatim}
 $ git config --global user.name Stivvo
 $ git config --global user.email entattis15@itsvinci.com
