riorganizzazione dei link
introdotta la sezione link di merge + rebase

--- a/git.tex
+++ b/git.tex
@@ -1123,18 +1123,24 @@ Makefile
         {diff HEAD vs diff --staged}
     \item \link{https://stackoverflow.com/questions/20889346/what-does-git-remote-mean}
         {che cos'è un remote}
-    \item \link{https://stackoverflow.com/questions/21756614/difference-between-git-merge-origin-master-and-git-pull}
-        {differenza tra merge e pull}
-    \item \link{https://stackoverflow.com/questions/16666089/whats-the-difference-between-git-merge-and-git-rebase}
-        {differenza tra merge e rebase}
     \item \link{https://stackoverflow.com/questions/3404294/merging-2-branches-together-in-git}
         {fare il merge di due branch}
     \item \link{https://stackoverflow.com/questions/18137175/in-git-what-is-the-difference-between-origin-master-vs-origin-master}
         {differenza tra origin master e origin/master}
+\end{itemize}
+
+\subsection{merge, rebase}
+\begin{itemize}
+    \item \link{https://stackoverflow.com/questions/179123/how-to-modify-existing-unpushed-commit-messages}
+        {modificare commit esistenti}
+    \item \link{https://stackoverflow.com/questions/21756614/difference-between-git-merge-origin-master-and-git-pull}
+        {differenza tra merge e pull}
     \item \link{https://www.atlassian.com/git/tutorials/rewriting-history/git-rebase}
         {git rebase}
     \item \link{https://www.atlassian.com/git/tutorials/merging-vs-rebasing}
         {merge vs rebase}
+    \item \link{https://stackoverflow.com/questions/16666089/whats-the-difference-between-git-merge-and-git-rebase}
+        {differenza tra merge e rebase}
 \end{itemize}
 
 \subsection{log, diff}
