--- a/git.tex
+++ b/git.tex
@@ -542,12 +542,15 @@ branches/  COMMIT_EDITMSG  config  description  FETCH_HEAD  HEAD  hooks/  index
 info/  logs/  objects/  ORIG_HEAD  packed-refs  refs/
 \end{verbatim}
 
-è molto importante la cartella refs. Contiene:
+è molto importante la cartella refs:
 
 \begin{verbatim}
 $ ls .git/refs
 heads/  remotes/  tags/
 \end{verbatim}
+
+Dietro a questi tre nomi ci sono concetti importanti di git che tornano utili
+con la maggior parte dei comandi
 
 \subsection{heads\label{heads}}
 In git una head è un riferimento ad un branch o ad un commit di un determinato
@@ -665,6 +668,13 @@ v1.0
 v2.0
 \end{verbatim}
 
+Oppure:
+
+\begin{verbatim}
+$ ls .git/refs/tags
+v1.0 v2.0
+\end{verbatim}
+
 Per creare un tag basta dare al comando un argomento, che sarà il nome del tag:
 
 \begin{verbatim}
@@ -694,6 +704,9 @@ Date:   Mon Mar 17 21:52:11 2020 -0700
     new release 3.0!
 \end{verbatim}
 
+L'output è molto simile a quello di \code{git log}. Se si vuole vedere le
+descrizioni di tutti i tag basta chiamare \code{git show} senza argomenti.
+
 Si può aggiungere un tag ad un qualsiasi commit precedente specificando il suo
 codice:
 
@@ -706,7 +719,7 @@ su uno specifico tag come si fa con i commit.
 Anche sull' assegnazione dei nomi alle versioni ci sono
 \link{https://semver.org/}{norme} da seguire.
 
-\subsection{Remote\label{remoti}}
+\subsection{Remotes\label{remoti}}
 Un remote è il percorso di un repository remoto, di solito è quello del
 repository sul server. Il primo remote che viene utilizzato in un repository
 viene chiamato di default \textbf{origin} (non è obbligatorio). I remote infatti
@@ -730,6 +743,13 @@ amanjot	https://github.com/samanjot/GitNoob2Pro (fetch)
 amanjot	https://github.com/samanjot/GitNoob2Pro (push)
 origin	https://github.com/Stivvo/GitNoob2Pro.git (fetch)
 origin	https://github.com/Stivvo/GitNoob2Pro.git (push)
+\end{verbatim}
+
+oppure:
+
+\begin{verbatim}
+$ ls .git/refs/remotes
+origin/ amanjot/
 \end{verbatim}
 
 Il remote amanjot è un fork (\reff{fork}) del repository di questa dispensa.
@@ -933,11 +953,13 @@ Per clonare un repository e tutti i suoi submodule:
 $ git clone --recursive
 \end{verbatim}
 
-Per aggiungere un submodule:
+Per aggiungere questa dispensa come submodule:
 
 \begin{verbatim}
-$ git submodule add 
+$ git submodule add https://github.com/Stivvo/GitNoob2Pro
 \end{verbatim}
+
+Per aggiornare 
 
 Da notare come viene aggiornato il file \code{.gitmodules}, da cui è possibile
 fare ulteriori modifiche ai submodule.
@@ -1141,6 +1163,8 @@ Makefile
         {merge vs rebase}
     \item \link{https://stackoverflow.com/questions/16666089/whats-the-difference-between-git-merge-and-git-rebase}
         {differenza tra merge e rebase}
+    \item \link{https://stackoverflow.com/questions/5828324/update-git-submodule-to-latest-commit-on-origin}
+        {aggiornare i submodule}
 \end{itemize}
 
 \subsection{log, diff}
